# PyADRecon-ADWS

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  dashboard_generator.py  generate_test_data.py  pyadrecon_adws.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conventional-commits.yml
PyADRecon-Report-20260218222544/: vulnad_local-Report.xlsx
PyADRecon-Report-20260218222544/CSV-Files/: ASREPRoastable.csv  AboutPyADRecon.csv  CertificateAuthorities.csv  CertificateTemplates.csv  ComputerSPNs.csv  Computers.csv  DNSRecords.csv  DNSZones.csv  Domain.csv  DomainControllers.csv  FineGrainedPasswordPolicy.csv  Forest.csv  GPOs.csv  GroupMembers.csv  Groups.csv  Kerberoastable.csv  LAPS.csv  OUs.csv  PasswordPolicy.csv  Printers.csv  ProtectedGroups.csv  SchemaHistory.csv  Sites.csv  UserSPNs.csv  Users.csv  gMSA.csv  gPLinks.csv  krbtgt.csv
PyADRecon_ADWS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
helpers/: __init__.py  adws_wrapper.py
helpers/adws/: __init__.py  adws.py  ms_nmf.py  ms_nns.py  soap_templates.py
windows/: README.md
